--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     Body Time Esthetics
 </h1>
 <body>
+    <p> Profissionais capacitados que darão toda a atenção que você precisa.
+        Tratamentos conforme a necessidade do cliente.
+        Avaliações gratuita
+        <a>
+            https://l.instagram.com/?u=http%3A%2F%2Fwww.facebook.com%2Fbodytimeesthetics&e=AT0GcuRkQChptVZTqxvQ30cHknfHc6poU-Wa2ACLfH2JqXObtaShG9BNGGf7yAVbtU98Ik4xzEDdcq6QnS42QCHA7FuIKtL5sdFkIuk7jo1Obaw2TiVrow
+        </a>
+    </p>
     
 </body>
 </html>
