--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <img width="200" src="imgs/bodytime.png" alt="" />
       </div>
     </div>
-    <a href="https://www.facebook.com/bodytimeesthetics"> </a>
+    <a href="https://www.facebook.com/bodytimeesthetics"> facebook </a>
   </body>
 </html>
