Facebook reposition and caps

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </p>
         <p>Tratamentos conforme a necessidade do cliente.</p>
         <p>Avaliações gratuitas.</p>
+        <a href="https://www.facebook.com/bodytimeesthetics"> Facebook </a>
       </div>
       <div class="secondbannerimg">
         <img width="200" src="imgs/bodytime.png" alt="" />
       </div>
     </div>
-    <a href="https://www.facebook.com/bodytimeesthetics"> facebook </a>
   </body>
 </html>
