--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
         alt="lady laying down getting a massage on her back"
       />
       <div class="bannertext">
-        <p>
-          Profissionais capacitados que darão toda a atenção que você precisa.
-        </p>
-        <p>Tratamentos conforme a necessidade do cliente.</p>
-        <p>Avaliações gratuitas.</p>
-        <a href="https://www.facebook.com/bodytimeesthetics"> Facebook </a>
+        <p><u> Body Time Esthetics</u></p>
       </div>
       <div class="secondbannerimg">
-        <img width="200" src="imgs/bodytime.png" alt="" />
+        <img width="300" src="imgs/bodytime.png" alt="" />
+        <a href="https://www.facebook.com/bodytimeesthetics"> Facebook </a>
       </div>
     </div>
+    <div class="infobox"></div>
   </body>
 </html>
