--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
         <a href="https://www.facebook.com/bodytimeesthetics"> Facebook </a>
       </div>
     </div>
-    <div class="infobox"></div>
+    <div class="infobox">
+      <p>Massage Service</p>
+      <p>Address: Rua Francisco Fernando, número 17, Japiim , Manaus, AM, Brazil</p>
+      <p>Phone number: +55 92 99122-6740</p>
+      <p>Email: bodytimeesthetics@gmail.com</p>
+      <p>
+        <ul>
+          <li>Monday 6:00 AM - 8:00 PM</li>
+          <li>Tuesday 6:00 AM - 8:00 PM</li>
+          <li>Wednesday 6:00 AM - 8:00 PM</li>
+          <li>Thursday 6:00 AM - 8:00 PM</li> 
+          <li>Friday 6:00 AM - 8:00 PM</li> 
+          <li>Saturday 7:00 AM - 3:00 PM</li> 
+          <li>Sunday CLOSED</li></ul>
+      </p>
+    </div>
   </body>
 </html>
