--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="secondbannerimg">
         <img width="300" src="imgs/bodytime.png" alt="" />
-        <a href="https://www.facebook.com/bodytimeesthetics"> Facebook </a>
+        
       </div>
     </div>
     <div class="infobox">
@@ -36,6 +36,10 @@
           <li>Friday 6:00 AM - 8:00 PM</li> 
           <li>Saturday 7:00 AM - 3:00 PM</li> 
           <li>Sunday CLOSED</li></ul>
+      </p>
+      <p>Rating: 4.7 (39 Reviews)</p>
+      <p>
+        <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
       </p>
     </div>
   </body>
