--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         alt="lady laying down getting a massage on her back"
       />
       <div class="bannertext">
-        <p><u> Body Time Esthetics</u></p>
+        <p><u><i>Body Time Esthetics</i></u></p>
       </div>
       <div class="secondbannerimg">
         <img width="300" src="imgs/bodytime.png" alt="" />
