--- a/index.html
+++ b/index.html
@@ -42,5 +42,13 @@
         <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
       </p>
     </div>
+    <div class="procedures">
+      <p>
+        Endermologia
+      </p>
+      <p>
+        carboxterapia
+      </p>
+    </div>
   </body>
 </html>
