--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
       <p>
         carboxterapia
       </p>
+      <p>
+        Drenagens
+      </p>
+      <p>
+        Ridiofrequencia
+      </p>
     </div>
   </body>
 </html>
