--- a/index.html
+++ b/index.html
@@ -42,19 +42,21 @@
         <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
       </p>
     </div>
-    <div class="procedures">
+    <div id="procedures1">
       <p>
         Endermologia
-      </p>
+      </p></div>
+      <div id="procedures2">
       <p>
         carboxterapia
-      </p>
+      </p></div>
+      <div id="procedures3">
       <p>
         Drenagens
-      </p>
+      </p></div>
+      <div id="procedures4">
       <p>
         Ridiofrequencia
-      </p>
-    </div>
+      </p></div>
   </body>
 </html>
