--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="bannerimg">
       <img
         width="1920"
-        src="https://scontent-lax3-1.xx.fbcdn.net/v/t39.30808-6/302548107_467144485423454_5004655091506315464_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=e3f864&_nc_ohc=CPQq5UKOM2wAX80dBFK&_nc_ht=scontent-lax3-1.xx&oh=00_AfA2gsNaJyRiXIXdZYKveEr6-l6q99TkemByA1NKXHPfAw&oe=644222B8"
+        src="imgs/top.jpg"
         alt="lady laying down getting a massage on her back"
       />
       <div class="bannertext">
