--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div id="procedures1">
       <p>
         Endermologia
-      </p></div>
+      </p>
+    </div>
       <div id="procedures2">
       <p>
         carboxterapia
@@ -56,7 +57,7 @@
       </p></div>
       <div id="procedures4">
       <p>
-        Ridiofrequencia
+        Radiofrequencia
       </p></div>
   </body>
 </html>
