flex box adjments

--- a/index.html
+++ b/index.html
@@ -42,22 +42,11 @@
         <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
       </p>
     </div>
-    <div id="procedures1">
-      <p>
-        Endermologia
-      </p>
-    </div>
-      <div id="procedures2">
-      <p>
-        carboxterapia
-      </p></div>
-      <div id="procedures3">
-      <p>
-        Drenagens
-      </p></div>
-      <div id="procedures4">
-      <p>
-        Radiofrequencia
-      </p></div>
+<div class="flex-container">
+  <div class="procedures1">Endermologia</div>
+  <div class="procedures2">carboxterapia</div>
+  <div class="procedures3">Drenagens</div>
+  <div class="procedures4">Radiofrequencia</div>
+</div>
   </body>
 </html>
