flex-container adjustments

--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
       </p>
     </div>
 <div class="flex-container">
-  <div class="procedures1">Endermologia</div>
-  <div class="procedures2">carboxterapia</div>
-  <div class="procedures3">Drenagens</div>
-  <div class="procedures4">Radiofrequencia</div>
+  <div class="procedures1">
+    <img src="imgs/endermologia.webp" alt="">
+    <p>Endermologia</p>
+  </div>
+  <div class="procedures2">
+    <img src="imgs/carboxterapia.jpg" alt="">
+    <p>carboxterapia</p>
+  </div>
+  <div class="procedures3">
+    <img src="imgs/drenagens.jpg" alt="">
+    <p>Drenagens</p>
+  </div>
+  <div class="procedures4">
+    <img src="imgs/radiofrequencia.jpeg" alt="">
+    <p>Radiofrequencia</p>
+  </div>
 </div>
   </body>
 </html>
