flex-box name change

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
       </p>
     </div>
-<div class="flex-container">
+<div class="grid2x2">
   <div class="procedures1">
     <img src="imgs/endermologia.webp" alt="">
     <p>Endermologia</p>
