2x2 grid corrections and completion

--- a/index.html
+++ b/index.html
@@ -43,21 +43,25 @@
       </p>
     </div>
 <div class="grid2x2">
-  <div class="procedures1">
-    <img src="imgs/endermologia.webp" alt="">
-    <p>Endermologia</p>
+  <div class="grid-row">
+    <div class="procedures1">
+      <img src="imgs/endermologia.webp" alt="">
+      <p>Endermologia</p>
+    </div>
+    <div class="procedures2">
+      <img src="imgs/carboxterapia.jpg" alt="">
+      <p>carboxterapia</p>
+    </div>
   </div>
-  <div class="procedures2">
-    <img src="imgs/carboxterapia.jpg" alt="">
-    <p>carboxterapia</p>
-  </div>
-  <div class="procedures3">
-    <img src="imgs/drenagens.jpg" alt="">
-    <p>Drenagens</p>
-  </div>
-  <div class="procedures4">
-    <img src="imgs/radiofrequencia.jpeg" alt="">
-    <p>Radiofrequencia</p>
+  <div class="grid-row">
+    <div class="procedures3">
+      <img src="imgs/drenagens.jpg" alt="">
+      <p>Drenagens</p>
+    </div>
+    <div class="procedures4">
+      <img src="imgs/radiofrequencia.jpeg" alt="">
+      <p>Radiofrequencia</p>
+    </div>
   </div>
 </div>
   </body>
