--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
       </p>
     </div>
+    <h6>body time</h6>
 <div class="grid2x2">
   <div class="grid-row">
     <div class="procedures1">
