--- a/index.html
+++ b/index.html
@@ -2,67 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>www.bodytimeesthetics.com</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="bannerimg">
+    <header class="banner">
       <img
-        width="1920"
         src="imgs/top.jpg"
         alt="lady laying down getting a massage on her back"
+        class="banner-img"
       />
-      <div class="bannertext">
-        <p><u><i>Body Time Esthetics</i></u></p>
+      <div class="banner-text">
+        <h1>Body Time Esthetics</h1>
       </div>
-      <div class="secondbannerimg">
-        <img width="300" src="imgs/bodytime.png" alt="" />
-        
+      <div class="second-banner-img">
+        <img src="imgs/bodytime.png" alt="" />
       </div>
-    </div>
-    <div class="infobox">
-      <p>Massage Service</p>
-      <p>Address: Rua Francisco Fernando, número 17, Japiim , Manaus, AM, Brazil</p>
-      <p>Phone number: +55 92 99122-6740</p>
-      <p>Email: bodytimeesthetics@gmail.com</p>
-      <p>
-        <ul>
-          <li>Monday 6:00 AM - 8:00 PM</li>
-          <li>Tuesday 6:00 AM - 8:00 PM</li>
-          <li>Wednesday 6:00 AM - 8:00 PM</li>
-          <li>Thursday 6:00 AM - 8:00 PM</li> 
-          <li>Friday 6:00 AM - 8:00 PM</li> 
-          <li>Saturday 7:00 AM - 3:00 PM</li> 
-          <li>Sunday CLOSED</li></ul>
-      </p>
+    </header>
+
+    <section class="info-box">
+      <h2>Massage Service</h2>
+      <address>
+        Rua Francisco Fernando, número 17, Japiim , Manaus, AM, Brazil
+        <br />
+        Phone number: +55 92 99122-6740
+        <br />
+        Email: bodytimeesthetics@gmail.com
+      </address>
+      <ul class="opening-hours">
+        <li>Monday 6:00 AM - 8:00 PM</li>
+        <li>Tuesday 6:00 AM - 8:00 PM</li>
+        <li>Wednesday 6:00 AM - 8:00 PM</li>
+        <li>Thursday 6:00 AM - 8:00 PM</li>
+        <li>Friday 6:00 AM - 8:00 PM</li>
+        <li>Saturday 7:00 AM - 3:00 PM</li>
+        <li>Sunday CLOSED</li>
+      </ul>
       <p>Rating: 4.7 (39 Reviews)</p>
       <p>
-        <a href="https://www.facebook.com/bodytimeesthetics"> www.facebook.com/bodytimeesthetics </a>
+        <a href="https://www.facebook.com/bodytimeesthetics">
+          www.facebook.com/bodytimeesthetics
+        </a>
       </p>
-    </div>
-<div class="grid2x2">
-  <div class="grid-row">
-    <div class="procedures1">
-      <img src="imgs/endermologia.webp" alt="">
-      <p>Endermologia</p>
-    </div>
-    <div class="procedures2">
-      <img src="imgs/carboxterapia.jpg" alt="">
-      <p>carboxterapia</p>
-    </div>
-  </div>
-  <div class="grid-row">
-    <div class="procedures3">
-      <img src="imgs/drenagens.jpg" alt="">
-      <p>Drenagens</p>
-    </div>
-    <div class="procedures4">
-      <img src="imgs/radiofrequencia.jpeg" alt="">
-      <p>Radiofrequencia</p>
-    </div>
-  </div>
-</div>
+    </section>
+
+    <section class="grid-2x2">
+      <div class="grid-row">
+        <div class="procedure">
+          <img src="imgs/endermologia.webp" alt="Endermologia" />
+          <p>Endermologia</p>
+        </div>
+        <div class="procedure">
+          <img src="imgs/carboxterapia.jpg" alt="Carboxterapia" />
+          <p>Carboxterapia</p>
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="procedure">
+          <img src="imgs/drenagens.jpg" alt="Drenagens" />
+          <p>Drenagens</p>
+        </div>
+        <div class="procedure">
+          <img src="imgs/radiofrequencia.jpeg" alt="Radiofrequencia" />
+          <p>Radiofrequencia</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
