--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p>Drenagens</p>
         </div>
         <div class="procedure">
-          <img src="imgs/radiofrequencia.jpeg" alt="Radiofrequencia" />
+          <img src="imgs/radiofrequencia3.jpg" alt="Radiofrequencia" />
           <p>Radiofrequencia</p>
         </div>
       </div>
