img tag updates

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="grid-2x2">
       <div class="grid-row">
         <div class="procedure">
-          <img src="imgs/endermologia.webp" alt="Endermologia" />
+          <img src="imgs/endermologia.jpg" alt="Endermologia" />
           <p>Endermologia</p>
         </div>
         <div class="procedure">
@@ -64,7 +64,7 @@
           <p>Drenagens</p>
         </div>
         <div class="procedure">
-          <img src="imgs/radiofrequencia3.jpg" alt="Radiofrequencia" />
+          <img src="imgs/radiofrequencia1.jpg" alt="Radiofrequencia" />
           <p>Radiofrequencia</p>
         </div>
       </div>
