procedures tag update

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 
     <section class="grid-2x2">
       <div class="grid-row">
-        <div class="procedure">
+        <div class="procedure1">
           <img src="imgs/endermologia.jpg" alt="Endermologia" />
           <p>Endermologia</p>
         </div>
-        <div class="procedure">
+        <div class="procedure2">
           <img src="imgs/carboxterapia.jpg" alt="Carboxterapia" />
           <p>Carboxterapia</p>
         </div>
       </div>
       <div class="grid-row">
-        <div class="procedure">
+        <div class="procedure3">
           <img src="imgs/drenagens.jpg" alt="Drenagens" />
           <p>Drenagens</p>
         </div>
-        <div class="procedure">
+        <div class="procedure4">
           <img src="imgs/radiofrequencia1.jpg" alt="Radiofrequencia" />
           <p>Radiofrequencia</p>
         </div>
